log
Thu Apr 30 08:10:20 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
1ca73ab
Thu Apr 30 08:11:15 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
35f8405
Thu Apr 30 08:17:05 PM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
a3bd9d7
Thu Apr 30 08:32:10 PM UTC 2026: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:43: error: expected ‘;’ before ‘if’
   66 |         keyComp = tree->current->pair->key
      |                                           ^
      |                                           ;
   67 |         if(keyComp == key) {
      |         ~~                                 
treemap.c:62:11: error: variable ‘keyComp’ set but not used [-Werror=unused-but-set-variable]
   62 |     void* keyComp = key;
      |           ^~~~~~~
cc1: all warnings being treated as errors
ec89f26
Thu Apr 30 08:33:08 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
dbfabc1
Thu Apr 30 08:40:36 PM UTC 2026: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:62:12: error: expected identifier or ‘(’ before ‘int’
   62 |     void* (int) keyComp;
      |            ^~~
treemap.c:66:16: error: ‘keyComp’ undeclared (first use in this function)
   66 |         (int*) keyComp = tree->current->pair->key;
      |                ^~~~~~~
treemap.c:66:16: note: each undeclared identifier is reported only once for each function it appears in
5f6550c
Thu Apr 30 08:40:57 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:24: error: lvalue required as left operand of assignment
   66 |         (int*) keyComp = tree->current->pair->key;
      |                        ^
c1deab7
Thu Apr 30 08:41:15 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
c7a4297
Thu Apr 30 08:43:04 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:69:19: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   69 |         } else if(lower_than(keyComp,key)) {
      |                   ^~~~~~~~~~
27ad9b6
Thu Apr 30 08:44:21 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:69:19: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   69 |         } else if(lower_than(keyComp,key)) {
      |                   ^~~~~~~~~~
e97f96c
Thu Apr 30 08:45:27 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:69:19: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   69 |         } else if(lower_than(keyComp,key)) {
      |                   ^~~~~~~~~~
7c81e80
Thu Apr 30 08:46:22 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
adaa64d
